--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'androidx.navigation.safeargs.kotlin'
 }
 
 android {
@@ -35,7 +36,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion = "1.1.0-rc02"
+        kotlinCompilerExtensionVersion = "1.2.0-rc02"
     }
 
 
@@ -55,7 +56,6 @@ dependencies {
     implementation 'androidx.compose.material:material-icons-extended:1.2.1'
     // Integration with activities
     implementation 'androidx.activity:activity-compose:1.5.1'
-    // Integration with ViewModels
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
     // Integration with observables
     implementation 'androidx.compose.runtime:runtime-livedata:1.2.1'
