--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'androidx.navigation.safeargs.kotlin'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -43,6 +44,7 @@ android {
 }
 
 dependencies {
+    def room_version = "2.4.3"
 
     implementation 'androidx.compose.ui:ui:1.2.1'
     // Tooling support (Previews, etc.)
@@ -66,6 +68,10 @@ dependencies {
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.2.1'
     //koin
     implementation "io.insert-koin:koin-android:3.2.0"
+    //Room DateBase
+    implementation "androidx.room:room-runtime:2.2.4"
+    kapt "androidx.room:room-compiler:2.2.4"
+    implementation "androidx.room:room-ktx:2.2.5"
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
