--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,18 @@
 buildscript {
     repositories {
         google()
+        mavenCentral()
+        maven { url 'https://jitpack.io' }
+        jcenter()
     }
     dependencies {
         def nav_version = "2.5.2"
+        def kotlin_version = '1.6.21'
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
+
 plugins {
     id 'com.android.application' version '7.2.2' apply false
     id 'com.android.library' version '7.2.2' apply false
